# tree-sitter-jinja2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  grammar.js  package-lock.json  package.json  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  implementation-ticket.yml  regression-report.yml
.github/workflows/: build_python.yml  build_wheels.yml
bindings/python/: README.md  pyproject.toml  setup.cfg  setup.py
bindings/python/tree_sitter_jinja2/: __init__.py
bindings/python3/: MANIFEST.in  README.md  requirements.txt  setup.py
bindings/python3/dbt_parser/: __init__.py
bindings/python3/tree-sitter-jinja2/: __init__.py
bindings/python3/tree_sitter_jinja2/: __init__.py
bindings/rust/: README.md  lib.rs
grammar/: grammar.js  package-lock.json
src/: grammar.json  node-types.json  parser.c
test/corpus/: float_tests.txt  integer_test.txt  integer_tests.txt  scoped_fn_call_tests.txt
