[package]
name = "tree-sitter-jinja2"
description = "Jinja2 grammar for the tree-sitter parsing library"
version = "0.1.0"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "jinja"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/fishtown-analytics/tree-sitter-jinja2"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"