[metadata]
name = tree-sitter-jinja2
version = 0.0.6
description = A Jinja2 grammar for tree-sitter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fishtown-analytics/tree-sitter-jinja2
author = Fishtown Analytics
author_email = info@fishtownanalytics.com
# license = <type>
# license_file = <file>
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6.1
packages = tree_sitter_jinja2
install_requires =
    tree_sitter==0.19.0
    setuptools-dso==2.0a1
zip_safe = False
