[metadata]
name = tree-sitter-jinja2
version = 0.1.0a1
description = A Jinja2 grammar for tree-sitter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbt-labs/tree-sitter-jinja2
author = dbt Labs
author_email = info@dbtlabs.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8.0
packages = tree_sitter_jinja2
install_requires =
    tree_sitter==0.19.0
    setuptools-dso==2.0a1
zip_safe = False
